--- a/resources/style.css
+++ b/resources/style.css
@@ -2,46 +2,93 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+aside {
+  position: relative;
+  background: url(david.jpg) center;
+  background-size: cover;
+  width: 50%;
+}
+aside h1 {
+  background-color: rgba(255, 255, 255, 0.25);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  color: black;
+  margin: 0;
+  padding: 25px;
+  font-size: 5rem;
+  text-align: center;
+}
+aside small {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 10px;
+  color: white;
+}
+
+main {
+  background-color: white;
+  padding: 25px;
+  width: 100%;
+}
+main h1, main h2 {
+  margin: 0;
+  padding: 0;
+}
+
+aside, main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 form {
-  border: 1px solid red;
-  width: 400px;
+  width: 100%;
   padding: 10px;
 }
 form button {
   width: 100%;
 }
 
-form ul {
-  list-style: none;
+fieldset {
+  border: 1px solid black;
   margin: 0;
-  padding: 0;
+  padding: 25px;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  -moz-column-gap: 20px;
-       column-gap: 20px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
   row-gap: 15px;
   margin-bottom: 20px;
 }
-form ul li input {
+fieldset div input {
+  background: transparent;
   margin-bottom: 5px;
   width: 100%;
   border: none;
   border-bottom: 1px dashed gray;
 }
-form ul li input:focus-visible {
+fieldset div input:focus-visible {
   border-bottom: 1px solid black;
   outline: none;
 }
-form ul li input + small {
+fieldset div input + label + br + small {
   visibility: hidden;
 }
-form ul li input:focus + small {
+fieldset div input:focus + label + br + small {
   visibility: visible;
 }
-
-input[required] ~ label::after {
-  content: "*";
+fieldset div input[required] ~ label::after {
+  content: " *";
   color: red;
 }/*# sourceMappingURL=style.css.map */
