--- a/resources/style.css
+++ b/resources/style.css
@@ -6,6 +6,10 @@
   font-family: "WorkSans";
   src: url(WorkSans.ttf);
 }
+@font-face {
+  font-family: "WorkSansEL";
+  src: url(WorkSansEL.ttf);
+}
 * {
   box-sizing: border-box;
 }
@@ -36,11 +40,39 @@ aside small a {
   color: white;
   font-weight: bold;
 }
+aside h1 {
+  color: white;
+  font: 7rem "WorkSansEL", sans-serif;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
 
 main {
   background: url(dust.jpeg) repeat;
   width: 100%;
   overflow: hidden;
+}
+main > div {
+  margin-bottom: 25px;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  padding: 0 25% 0 25px;
+}
+main > div h2 {
+  font: 1.75rem "WorkSansEL", sans-serif;
+  margin-bottom: 0;
+}
+main > div h1 {
+  margin-top: 0;
+  font: 2.05rem "WorkSans", sans-serif;
+}
+main > div p {
+  font: 0.75rem "LibreBaskerville", serif;
+}
+main > div p a {
+  color: black;
+  font-weight: bold;
 }
 
 aside, main {
